--- a/main.html
+++ b/main.html
@@ -8,7 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<div id="boxmodel">
+	This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+</div>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
